background transition. responsive layout

--- a/src/stylesheets/app.scss
+++ b/src/stylesheets/app.scss
@@ -5,6 +5,7 @@
   width: 100%;
   height: 1080px;
   background-image: url('../images/image-tab0.jpg');
+  transition: background 1s linear;
 
   &__header {
     margin-top: 4em;
